--- a/index.html
+++ b/index.html
@@ -44,15 +44,15 @@
 
         <section>
             <div  class="bandeiras">
-                <img src="/assets/brasil 2.png" alt="brasil">
+                <img src="./assets/brasil 2.png" alt="brasil">
                 <p class="select-money">Real</p>
                 <p class="value-select" id="value-text">R$ 10.000,00</p>
             </div>
 
-            <img class="assets" src="/assets/Vector.png" alt="seta"/>
+            <img class="assets" src="./assets/Vector.png" alt="seta"/>
 
             <div  class="bandeiras">
-                <img id="currency-img" src="/assets/estados-unidos (1) 1.png" alt="EUA">
+                <img id="currency-img" src="./assets/estados-unidos (1) 1.png" alt="EUA">
                 <p id="currency-text-value" class="select-money">Dólar Americano</p>
                 <p  id="value-text-current" class="value-select">UR$ 2.000,00</p>
             </div>
