--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <select id="currency-name">
                     <option> UR$ Dólar Americano </option>
                     <option> € Euro </option>
-                    <option> Bitcoin </option>
+                    <option>  ₿ Bitcoin </option>
                 </select>
 
                 <label> valor
